[DOC]: Add comments on methods.
